[package]
name = "sock-rdp"
version = "0.1.0"
authors = ["Devin Ragotzy <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = { path = "../scrap" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"

# tungstenite deps
tokio-tungstenite = "0.11"
tokio = { version = "0.2", default-features = false, features = ["io-std", "macros", "stream", "time"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3"